--- a/style.css
+++ b/style.css
@@ -146,3 +146,13 @@ input {
     background-color: rgb(107, 7, 107);
     color: #eee;
 }
+@media (max-width: 599px) {
+    .header {
+        margin-left: 50px;
+    }
+    input {
+        margin: auto;
+    }
+}
+
+@media(min-width:600px) {}
