--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ input {
     background-color: rgb(107, 7, 107);
     color: #eee;
 }
-@media (max-width: 300px) {
+@media (min-width: 300px) {
     .header {
         margin-left: 50px;
     }
